# Hermes-computer-use-toolkit

./: .gitignore  README.md  pyproject.toml
docs/: contract-v1.md  extraction-seams.md  migration-execution-plan.md  source-checkpoint.md
src/computer_use_toolkit/: __init__.py  contracts.py  mcp_server.py
src/computer_use_toolkit/queue/: __init__.py  actions.py  claims.py
src/computer_use_toolkit/state/: __init__.py  approval_store.py  manifests.py  session_store.py
src/computer_use_toolkit/worker/: __init__.py  service.py
tests/: test_contract_smoke.py  test_queue_actions.py  test_queue_claims.py  test_state_approval_store.py  test_state_manifests.py  test_worker_service.py
