[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-computer-use-toolkit"
version = "0.1.0"
description = "Standalone extraction target for Hermes macOS computer-use control-plane helpers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hermes Agent" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
